[project]
name = "researcher_multi_agents"
version = "0.1.0"
description = "researcher-multi-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
researcher_multi_agents = "researcher_multi_agents.main:run"
run_crew = "researcher_multi_agents.main:run"
train = "researcher_multi_agents.main:train"
replay = "researcher_multi_agents.main:replay"
test = "researcher_multi_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
